--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img{
     height: 38em;
     width: 25em;
     margin-top: 25px;
-    
+    box-shadow: 2px 2px 25px 1px hsl(220, 15%, 55%);
 }
 
 h3{
